# K1MusePiPro_Robot

./: .gitignore  LICENSE  README.md
android/: README.md  (+2 more)
ros2/ai/k1muse_ai_runtime/: CMakeLists.txt  package.xml
ros2/ai/k1muse_ai_runtime/config/: ai_runtime.mock.yaml  ai_runtime.real_k1.yaml  detectors.yaml  profiles.yaml
ros2/ai/k1muse_ai_runtime/launch/: ai_runtime.mock.launch.py  ai_runtime.real_k1.launch.py
ros2/ai/k1muse_ai_runtime/src/: ai_runtime_node.cpp  alert_publisher.cpp  alert_ros_publisher.cpp  backend_factory.cpp  bounded_cpu_worker.cpp  detector_registry.cpp  main.cpp  resource_guard.cpp  resource_manager.cpp  runtime_config.cpp  runtime_core.cpp  runtime_profile_manager.cpp  runtime_scheduler.cpp  vision_detector_scheduler.cpp  voice_exclusive_guard.cpp
ros2/ai/k1muse_ai_runtime/test/: test_ai_runtime_lifecycle.cpp  test_audio_frame_validator.cpp  test_detector_registry.cpp  test_latest_frame_buffer.cpp  test_resource_guard.cpp  test_resource_manager.cpp  test_runtime_config.cpp  test_runtime_core.cpp  test_runtime_scheduler.cpp  test_tts_runtime.cpp  test_vad_asr_runtime.cpp  test_vad_segmenter.cpp  test_vision_pipeline.cpp  test_vision_runtime.cpp
ros2/ai/k1muse_ai_runtime_msgs/: CMakeLists.txt  package.xml
ros2/ai/k1muse_ai_runtime_msgs/msg/: AiRuntimeControl.msg  AiRuntimeState.msg  AiruntimeAlert.msg  AiruntimeMode.msg  AiruntimeResource.msg  Pose2D.msg  Pose2DFrame.msg
ros2/ai/k1muse_ai_runtime_msgs/srv/: EnableDetector.srv  GetMode.srv  SetMode.srv
ros2/ai/k1muse_common/: CMakeLists.txt  package.xml
ros2/ai/k1muse_common/msg/: NodeReady.msg
ros2/ai/k1muse_common/test/: test_id_utils.cpp  test_qos_profiles.cpp
ros2/ai/k1muse_mock_devices/: CMakeLists.txt  package.xml
ros2/ai/k1muse_mock_devices/config/: audio_scenarios.minimal.yaml
ros2/ai/k1muse_mock_devices/src/: audio_scenario_main.cpp  audio_scenario_node.cpp  camera_scenario_main.cpp  camera_scenario_node.cpp  depth_camera_scenario_node.cpp  depth_scenario_main.cpp
ros2/ai/k1muse_mock_devices/test/: test_audio_scenario.cpp  test_camera_scenario.cpp  test_depth_scenario.cpp
ros2/ai/k1muse_multimodal_supervisor/: CMakeLists.txt  package.xml
ros2/ai/k1muse_multimodal_supervisor/config/: supervisor.real_k1.yaml
ros2/ai/k1muse_multimodal_supervisor/src/: interaction_state_machine.cpp  main.cpp  multimodal_supervisor_node.cpp  runtime_control_builder.cpp  target_cache.cpp
ros2/ai/k1muse_multimodal_supervisor/test/: test_control_contract.cpp  test_interaction_state_machine.cpp  test_runtime_control_builder.cpp  test_supervisor_node.cpp  test_target_cache.cpp  test_voice_flow_integration.cpp
ros2/ai/k1muse_robot_bringup/: CMakeLists.txt  package.xml
ros2/ai/k1muse_robot_bringup/config/: robot.mock.yaml  robot.real_k1.yaml
ros2/ai/k1muse_robot_bringup/launch/: robot.mock.launch.py  robot.real_k1.launch.py  robot.real_motion.launch.py  targeting.mock.launch.py  voice_flow.mock.launch.py
ros2/ai/k1muse_vision_3d/: CMakeLists.txt  package.xml
ros2/ai/k1muse_vision_3d/config/: vision_3d.mock.yaml
ros2/ai/k1muse_vision_3d/src/: geometry.cpp  main.cpp  vision_3d_node.cpp
ros2/ai/k1muse_vision_3d/test/: test_geometry.cpp  test_vision_3d_node.cpp
ros2/ai/k1muse_vision_msgs/: CMakeLists.txt  package.xml
ros2/ai/k1muse_vision_msgs/msg/: Detection2D.msg  Detection2DFrame.msg  Target3D.msg  TargetRequest.msg  TargetResponse.msg
ros2/ai/k1muse_voice_audio/: CMakeLists.txt  package.xml
ros2/ai/k1muse_voice_audio/config/: audio.mock.yaml  audio_io.real_k1.yaml
ros2/ai/k1muse_voice_audio/src/: alsa_backend.cpp  audio_io_node.cpp  fake_audio_backend.cpp  main.cpp  mock_audio_device.cpp  portaudio_backend.cpp  portaudio_device.cpp
ros2/ai/k1muse_voice_audio/test/: test_audio_playback_tracker.cpp
ros2/ai/k1muse_voice_intent/: CMakeLists.txt  package.xml
ros2/ai/k1muse_voice_intent/config/: intent.mock.yaml  intent.real_k1.yaml  llama_server.real_k1.yaml
ros2/ai/k1muse_voice_intent/src/: asr_text_cleaner.cpp  fast_intent.cpp  intent_node.cpp  intent_router.cpp  llama_server_client.cpp  llm_intent_mapper.cpp  llm_response_validator.cpp  main.cpp  mock_llm_intent_client.cpp  real_llm_intent_client.cpp
ros2/ai/k1muse_voice_intent/test/: test_asr_text_cleaner.cpp  test_fast_intent.cpp  test_intent_node.cpp  test_intent_router.cpp
ros2/ai/k1muse_voice_msgs/: CMakeLists.txt  package.xml
ros2/ai/k1muse_voice_msgs/msg/: AudioPlayRequest.msg  AudioPlaybackState.msg  IntentLite.msg  IntentStatus.msg  ListenEvent.msg  ListenResult.msg  TtsPlayRequest.msg  TtsStatus.msg  TtsTextRequest.msg  WakewordEvent.msg
ros2/ai/k1muse_voice_reminder/: CMakeLists.txt  package.xml
ros2/ai/k1muse_voice_reminder/config/: reminder.mock.yaml
ros2/ai/k1muse_voice_reminder/src/: main.cpp  reminder_handler.cpp  reminder_node.cpp  reminder_parser.cpp  reminder_store.cpp
ros2/ai/k1muse_voice_reminder/test/: test_reminder_handler.cpp  test_reminder_parser.cpp  test_reminder_store.cpp
ros2/control/k1muse_control_core/: CMakeLists.txt  README.md  package.xml
ros2/control/k1muse_control_core/test/: test_control_core.c
ros2/control/k1muse_control_manager/: CMakeLists.txt  package.xml
ros2/control/k1muse_control_manager/config/: control_manager.mock.yaml  control_manager.real.yaml  grasp_profiles.yaml
ros2/control/k1muse_control_manager/launch/: control_manager_mock.launch.py  control_manager_real.launch.py
ros2/control/k1muse_control_manager/src/: control_manager_node.cpp  device_session.cpp  execution_policy.cpp  grasp_profile_store.cpp  grasp_task_executor.cpp  main.cpp  mock_task_executor.cpp  serial_transport.cpp  stm32_actuator_client.cpp
ros2/control/k1muse_control_manager/test/: test_control_manager_node.cpp  test_grasp_profile_store.cpp  (+1 more)
ros2/control/k1muse_task_manager/: CMakeLists.txt  package.xml
ros2/navigation/imu_ros2_device/: package.xml  setup.py
ros2/navigation/k1muse_description/: CMakeLists.txt  package.xml
ros2/navigation/k1muse_exploration/: package.xml  setup.cfg  setup.py
ros2/navigation/k1muse_mcu_bridge/: CMakeLists.txt  DESIGN.md  package.xml
(+409 files in other folders)
