<?xml version="1.0"?>
<package format="3">
  <name>k1muse_mock_devices</name>
  <version>0.1.0</version>
  <description>Deterministic mock devices for K1MUSE AI Runtime testing.</description>
  <maintainer email="maintainer@example.com">K1MUSE Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>k1muse_audio_msgs</depend>
  <depend>k1muse_common</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
