<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>k1muse_robot_bringup</name>
  <version>0.1.0</version>
  <description>K1MUSE robot bringup launch files</description>
  <maintainer email="dev@k1muse.local">k1muse</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>k1muse_ai_runtime</exec_depend>
  <exec_depend>k1muse_voice_audio</exec_depend>
  <exec_depend>k1muse_voice_intent</exec_depend>
  <exec_depend>k1muse_multimodal_supervisor</exec_depend>
  <exec_depend>k1muse_task_manager</exec_depend>
  <exec_depend>k1muse_control_manager</exec_depend>
  <exec_depend>k1muse_voice_reminder</exec_depend>
  <exec_depend>k1muse_vision_3d</exec_depend>
  <exec_depend>k1muse_mock_devices</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
