<?xml version="1.0"?>
<package format="3">
  <name>k1muse_vision_3d</name>
  <version>0.1.0</version>
  <description>3D target localization from 2D detections and depth images.</description>
  <maintainer email="maintainer@example.com">K1MUSE Maintainer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>k1muse_common</depend>
  <depend>k1muse_vision_msgs</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
